GWT Events  - iCalendar export    - added ability to export iCalendar with all meetings marked as CANCELLED (when an event is deleted / rejected)    - export meetings using RRULE rather then RDATE (RDATE does not seem to work well in Apple's iCal)  - all exports    - include user id in the encoded export URL (to be able to export My Events, etc.)  - Add/Edit Event    - event managers can use standard notes    - Add Meetings: fixed scrolling issue in FireFox (when there are many days selected), show hints  - Academic Session selection   - show first and last event date of the selected session as a hint - Events/Meetings   - alignment of Capacity column header moved to right

--- a/trunk/WebContent/styles/unitime.css
+++ b/trunk/WebContent/styles/unitime.css
@@ -1459,7 +1459,7 @@ h1 {
 	-moz-border-radius: 1px;
 	border: 1px solid #9CB0CE;
 	padding: 1px;
-	width: 530px;
+	width: 560px;
 	height: 100%;
 	font-family: Verdana, sans-serif;
 	font-size: 8pt;
@@ -1585,7 +1585,7 @@ h1 {
 	-moz-box-shadow: 1px 2px 4px #9CB0CE;
 	-webkit-box-shadow: 1px 2px 4px #9CB0CE;
 	box-shadow: 1px 2px 4px #9CB0CE;
-	width: 530px;
+	width: 560px;
 	margin-top: -2px;
 	font-family: Verdana, sans-serif;
 	font-size: 8pt;
@@ -1596,7 +1596,7 @@ h1 {
 }
 
 .unitime-FilterBoxPopup .suggestPopupMiddleCenter {
-	width: 526px;
+	width: 556px;
 }
 
 .unitime-FilterBoxPopup .item {
@@ -2231,6 +2231,10 @@ div.gwt-MenuBarPopup {
 	color: red;
 }
 
+.unitime-MeetingSelection {
+	border-spacing: 0px;
+}
+
 .unitime-MeetingSelection .box {
 	display: table;
 }
@@ -2255,7 +2259,7 @@ div.gwt-MenuBarPopup {
 	border-right: 1px solid black;
 	border-bottom: 1px solid black;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: top;
 	font-size: small;	
 	text-overflow: ellipsis;
 	cursor: pointer;
